add_subdirectory(static/brachistochrone)
add_subdirectory(static/zermelo)
add_subdirectory(static/hypersens)
add_subdirectory(static/delta3_launch)

add_subdirectory(builder/brachistochrone)
add_subdirectory(builder/zermelo)
add_subdirectory(builder/hypersens)
add_subdirectory(builder/delta3_launch)
